syntax = "proto3";
package playerpb;

import "github.com/luno/reflex/reflexpb/reflex.proto";

service Player {
    rpc Stream (reflexpb.StreamRequest) returns (stream reflexpb.Event) {}
    rpc GetRoundParts(GetRoundReq) returns (GetRoundRes) {}
}

message GetRoundReq {
    int64 round_id = 1;
}

message GetRoundRes {
    int64 rank = 1;
    repeated PlayerParts parts = 2;
}

message PlayerParts {
    string player = 1;
    int64 part = 2;
}
